added hero content in html css remaining

--- a/dubaivisa.css
+++ b/dubaivisa.css
@@ -20,6 +20,19 @@ text-decoration: none;
 color: black;
 margin: 0 15px;
 }
+.visa-hero-header h1 {
+    font-weight: 700;
+    margin: 20px 0;
+    letter-spacing: 1px;
+}
+.visa-hero-content h2{
+   font-weight: 600;
+}
+
+.visa-hero-img img{
+    width: 66%;
+    border-radius: 25px;
+}
 @media screen and (max-width:767px) {
 
 .side-nav-wrapper {
